# vbd-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.py  app.py  pptx_utils.py  pyproject.toml  router.py  tools.py  ui.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: github-copilot-sdk.instructions.md
.github/workflows/: copilot-setup-steps.yml
presentations/: VBD-Copilot.pptx
samples/: keda-aks-servicebus-demo.md
samples/demos/: README.md  generic-fabric-trustworthy-data-demos.md  generic-github-agentic-workflows-demos.md  internal-keda-demos.md
samples/demos/generic-fabric-trustworthy-data/: demo-1-onelake-security-setup.py  demo-2-rls-setup.py  demo-3-sensitivity-label-prereq-checklist.md  demo-4-git-pipeline-setup.sh  demo-5-deploy-fabric.yml  demo-5-deploy.py  demo-5-parameter.yml
samples/demos/generic-github-agentic-workflows/: demo-1-daily-repo-health.sh  demo-2-issue-triage.sh  demo-3-code-review.sh
samples/demos/internal-keda/: demo-1-blast_queue.py  demo-1-deployment.yaml  demo-1-scaledobject.yaml  demo-1-serviceaccount.yaml  demo-1-triggerauth.yaml  demo-2-demo-app.yaml  demo-2-k6-script.js  demo-2-scaledobject-azure-monitor.yaml  demo-2-scaledobject.yaml  demo-2-servicemonitor.yaml  demo-3-demo-app.yaml  demo-3-httpscaledobject-concurrency.yaml  (+2 more)
samples/slides/: README.md  fabric-trustworthy-data-l300-2h.pptx  gh-aw-l300-1h.pptx  keda-banking-l300-30min.pptx
scripts/: demo_qa_checks.py  pptx_qa_checks.py
scripts/office/: soffice.py
skills/pptx-generator/: SKILL.md
(+1 files in other folders)
