[project]
name = "vbd-copilot"
version = "1.0.0"
description = "VBD-Copilot: AI-powered presentation and demo builder for Microsoft Cloud Solution Architects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk==0.1.29",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0.43",
    "rich>=13.0",
    "python-pptx>=1.0.2",
    "markitdown>=0.1.0",
]

[project.scripts]
vbd-copilot = "app:main_entry"

[tool.setuptools]
py-modules = ["app", "agents", "router", "tools", "ui", "pptx_utils"]
